--- a/src/main/resources/application.properties.example
+++ b/src/main/resources/application.properties.example
@@ -6,3 +6,9 @@ naver.clientSecret=naver_client_secret
 
 kakao.apiUrl=https://dapi.kakao.com
 kakao.authorization=KakaoAK kakao_authoraziation
+
+spring.datasource.url=jdbc:mysql://localhost:3306/jigju?serverTimezone=Asia/Seoul
+spring.datasource.username=mysql_username
+spring.datasource.password=mysql_password
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
