--- a/src/main/resources/application.properties.example
+++ b/src/main/resources/application.properties.example
@@ -12,3 +12,4 @@ spring.datasource.username=mysql_username
 spring.datasource.password=mysql_password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
